--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Fetch</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/52d2b40c3f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -11,12 +12,15 @@
             <input type="text" class="search" id="search" />
         </div>
         <div class="fiter">
-            <a href="" class="maleBtn"><button class="filterbtn maleBtn">Male</button></a>
-            <button class="filterbtn">Female</button>
+            <button class="filterbtn maleBtn">Male</button>
+            <button class="filterbtn femaleBtn">Female</button>
         </div>
         <div class="UsersUI">
             
         </div>
+    </div>
+    <div class="loading">
+        <!-- <i class="fas fa-spinner fa-pulse"></i> -->
     </div>
     <script src="./jeeva.js"></script>
 </body>
