--- a/male.html
+++ b/male.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <div class="maleUsers">
+        <div class="header">
+            <h1 class="logo">UserDetails</h1>
+            <input type="text" class="search" id="search" />
+        </div>
+        <div class="UsersUI">
             
         </div>
     </div>
-    <script src="./male.js"></script>
+    <script src="male.js"></script>
 </body>
 </html>
