--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="loading">
-        <!-- <i class="fas fa-spinner fa-pulse"></i> -->
+        <i class="fas fa-spinner fa-pulse"></i>
     </div>
     <script src="./jeeva.js"></script>
 </body>
