--- a/user.html
+++ b/user.html
@@ -3,12 +3,15 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="https://kit.fontawesome.com/7e79f21779.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/52d2b40c3f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <div class="userDetails">
             
+        </div>
+        <div class="loading">
+            <i class="fas fa-spinner fa-pulse"></i>
         </div>
     </div>
     <script src="./use.js"></script>
