--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="loading">
         <i class="fas fa-spinner fa-pulse"></i>
     </div>
-    <script src="./jeeva.js"></script>
+    <script src="./newJeeva.js"></script>
+    <!-- <script src="./jeeva.js"></script> -->
 </body>
 </html>
