--- a/user.html
+++ b/user.html
@@ -6,12 +6,14 @@
     <script src="https://kit.fontawesome.com/52d2b40c3f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container userContainer">
+        <a href="./index.html"> <i class="fa fa-arrow-left leftarrow" aria-hidden="true"> </i></a>
+
         <div class="userDetails">
             
         </div>
         <div class="loading">
-            <i class="fas fa-spinner fa-pulse"></i>
+          <i class="fas fa-spinner fa-pulse"></i>
         </div>
     </div>
     <script src="./use.js"></script>
