--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <div class="UsersUI">
             
         </div>
+        <button class="view">viewmore</button>
+
     </div>
     <div class="loading">
         <i class="fas fa-spinner fa-pulse"></i>
     </div>
-    <script src="./newJeeva.js"></script>
-    <!-- <script src="./jeeva.js"></script> -->
+    <!-- <script src="./newJeeva.js"></script> -->
+    <script src="./jeeva.js"></script>
 </body>
 </html>
